@@ -1,3 +1,9 @@
+2015-01-09  c.hetherington  <cth@carlh.net>
+
+	* Potentially fix another crash at 99% due
+	to an over-assertive assert in the audio
+	deinterleaving code.
+
 2015-01-08  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.76.37 released.
